--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,5 @@ Document
 pytesseract
 numpy
 datetime
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz
+spacy
