--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,13 @@
 streamlit
-sentence-transformers
-pdfplumber
-pytesseract
-python-docx
-PyVi
-Pillow
-io 
-os
-re
-json
-uuid
-unicodedata
-math
-List
-Dict
-Any
-Tuple
-Image
-Document
-pytesseract
-numpy
-datetime
+python-dotenv
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz
+pillow
+pdfplumber
+python-docx
+pytesseract
 spacy
+sentence-transformers
+numpy
+scikit-learn
+torch
+transformers
