--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-streamlit
-python-dotenv
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz
-pillow
-pdfplumber
-python-docx
-pytesseract
-spacy
-sentence-transformers
-numpy
-scikit-learn
-torch
-transformers
+streamlit==1.29.0
+numpy==1.26.1
+pandas==2.1.1
+python-docx==0.8.11
+pdfplumber==0.9.0
+pillow==10.0.1
+python-dotenv==1.1.1
+pytesseract==0.3.10
+sentence-transformers==2.2.2
+torch==2.1.0
+nltk==3.8.1
+pyvi==0.1.5
+spacy==3.6.1
