--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,29 @@
+# Streamlit
 streamlit==1.29.0
+rich==14.1.0
+markdown-it-py==4.0.0
+mdurl==0.1.2
+
+# Data processing
 numpy==1.26.1
 pandas==2.1.1
+python-dotenv==1.1.1
+
+# File handling
 python-docx==0.8.11
 pdfplumber==0.11.4
 pillow==10.0.1
-python-dotenv==1.1.1
 pytesseract==0.3.10
+
+# NLP
 sentence-transformers==2.2.2
-torch==2.6.0
 nltk==3.8.1
-pyvi==0.1.5
 spacy==3.6.1
+
+# Vietnamese NLP
+git+https://github.com/trungtv/pyvi.git
+
+# Machine Learning
+torch==2.6.0+cpu  # nếu bạn chỉ cần CPU
+-f https://download.pytorch.org/whl/torch_stable.html
+
